--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		height: 100%;
 		max-height: 800px;
 		background: #eee;
+		/*overflow: hidden;*/
 	}
 
 	div.axes {
@@ -40,7 +41,7 @@
 		margin: 5px 0;
 	}
 
-	div#timeStamps div {
+	.timeStamp {
 		width: 40px;
 		height: 20px;
 	}
@@ -61,11 +62,11 @@
 	}
 
 	div#scrollArea {
+		display: none;
 		position: absolute;
 		width: 100%;
 		height: 80px;
 		z-index: 99;
-		visibility: hidden;
 	}
 
 	div.graph canvas {
