--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	.flex {
 		display: flex;
 		align-items: center;
+		justify-content: center;
 	}
 	body {
 		height: 100vh;
 		margin: 0;
 		/*overflow: hidden;*/
-		justify-content: center;
 	}
 	div#box {
 		width: 100%;
@@ -38,26 +38,32 @@
 		width: 100%;
 		color: rgba(0,0,0,.5);
 		border-bottom: 1px solid rgba(0,0,0,.2);
-		margin: 5px 0;
+		margin: 10px 0;
 	}
 
-	.timeStamp {
-		width: 40px;
-		height: 20px;
+	div#timeStamps {
+		white-space: nowrap;
+	}
+	div#timeStamps div {
+		width: 60px;
+		text-align: center;
+		display: inline-block;
 	}
 
 	div.graph {
+		position: relative;
 		width: 100%;
-		z-index: 100;
+		z-index: 99;
 	}
 
-	div.main {
+	div#main {
+		position: relative;
 		height: 400px;
 	}
 
-	div.scroll {
+	div#scroll {
 		position: relative;
-		top: 40px;
+		margin-top: 40px;
 		height: 80px;
 	}
 
@@ -66,30 +72,26 @@
 		position: absolute;
 		width: 100%;
 		height: 80px;
-		z-index: 99;
+		z-index: 100;
 	}
 
 	div.graph canvas {
-		position: relative;
-		transition: .2;
+		position: absolute;
+		transition: .1s ease-out;
 	}
-	canvas#left {
-		top: -400px;
-	}
-	canvas#left_mini {
-		top: -80px;
+	div#scroll canvas {
+		top: 0;
 	}
 
 	div#point {
 		position: relative;
-		top: -160px;
 		height: 78px;
 		border-top: 1px solid rgba(0,0,0,.2);
 		border-bottom: 1px solid rgba(0,0,0,.2);
 		border-radius: 4px;
 		display: none;
 		cursor: grab;
-		transition: .2;
+		z-index: 99;
 	}
 	div.border {
 		position: relative;
@@ -107,6 +109,70 @@
 		left: calc(100% - 23px);
 	}
 
+	div.buttons {
+		position: relative;
+		width: 50%;
+	}
+	div.switchers {
+		display: inline-block;
+		position: relative;
+		background: white;
+		border-radius: 50px;
+		border: 1px solid #aaa;
+		padding: 3px 10px 3px 5px;
+		cursor: pointer;
+	}
+	div.led {
+		position: relative;
+		width: 25px;
+		height: 25px;
+		border-radius: 50%;
+	}
+	div.led:before {
+		position: absolute;
+		content: "";
+		width: 5px;
+		height: 12px;
+		transform: rotateZ(45deg);
+		border-right: 2px solid white;
+		border-bottom: 2px solid white;
+	}
+	div.led div {
+		position: absolute;
+		height: 0;
+		width: 0;
+		background: white;
+		border-radius: 50%;
+		transition: .2s;
+	}
+	div#switchJoined div.led {
+		background: #4fea7e;
+	}
+	div#switchLeft div.led {
+		background: #ea4f4f;
+	}
+	div.switchers span {
+		margin-left: 10px;
+	}
+
+	div#hints {
+		position: absolute;
+		top: 0;
+		right: 0;
+		background: white;
+		padding: 10px;
+		border-radius: 0 0 0 10px;
+		z-index: 100;
+	}
+	div.sumContainer {
+		display: inline-block;
+		width: 50px;
+	}
+
+	div.pillar {
+		position: absolute;
+	}
+
 	</style>
 </head>
 <body class="flex">
@@ -121,24 +187,39 @@
 				<div>0</div>
 				<div>0</div>
 			</div>
-			<div id="timeStamps" class="flex">
+			<div id="timeStamps">
+			</div>
+
+			<div id="hints">
+				<div id="day"></div>
+				<!-- <div class="sumContainer">
+					<div id="sumJoined" class="flex"><span>142</span>Joined</div>
+				</div>
+				<div class="sumContainer">
+					<div id="sumLeft" class="flex"><span>67</span>Left</div>
+				</div> -->
 			</div>
 		</div>
 
 		<div class="graph">
-			<div class="main">
-				<canvas id="joined" height="400" width="24"></canvas>
-				<canvas id="left" height="400" width="24"></canvas>
+
+			<div id="main">
+				<div class="pillar">
+					<div id="joinedPoint"></div>
+					<div id="leftPoint"></div>
+				</div>
 			</div>
-			<div class="scroll">
+			<div id="scroll">
 				<div id="scrollArea"></div>
-				<canvas id="joined_mini" height="80" width="24"></canvas>
-				<canvas id="left_mini" height="80" width="24"></canvas>
 				<div id="point">
 					<div class="border" id="left_border"></div>
 					<div class="border" id="right_border"></div>
 				</div>
 			</div>
+
+			<div id="buttons">
+			</div>
+			
 		</div>
 
 	</div>
