--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	body {
 		height: 100vh;
 		margin: 0;
+		transition: .1s;
 		/*overflow: hidden;*/
 	}
 	div#box {
@@ -43,11 +44,13 @@
 	}
 
 	div#timeStamps {
+		position: absolute;
+		height: 20px;
+		bottom: -20px;
 		white-space: nowrap;
 	}
 	div#timeStamps div {
 		width: 60px;
-		text-align: center;
 		display: inline-block;
 	}
 
@@ -68,7 +71,7 @@
 
 	div#scroll {
 		position: relative;
-		margin-top: 40px;
+		margin-top: 30px;
 		height: 80px;
 	}
 
@@ -112,16 +115,15 @@
 		left: calc(100% - 23px);
 	}
 
-	div.buttons {
+	div#buttons {
 		position: relative;
-		width: 50%;
+		margin-top: 2%;
 	}
 	div.switchers {
 		display: inline-block;
 		position: relative;
-		background: white;
 		border-radius: 50px;
-		border: 1px solid #aaa;
+		border: 1px solid rgba(0,0,0,.2);
 		padding: 3px 10px 3px 5px;
 		cursor: pointer;
 	}
@@ -148,12 +150,6 @@
 		border-radius: 50%;
 		transition: .2s;
 	}
-	div#switchJoined div.led {
-		background: #4fea7e;
-	}
-	div#switchLeft div.led {
-		background: #ea4f4f;
-	}
 	div.switchers span {
 		margin-left: 10px;
 	}
@@ -166,6 +162,7 @@
 		padding: 10px;
 		border-radius: 0 0 0 10px;
 		z-index: 100;
+		transition: .1s;
 	}
 	div.day {
 		text-align: center;
@@ -174,6 +171,7 @@
 	div.sumContainer {
 		display: inline-block;
 		width: 50px;
+		transition: .1s;
 	}
 
 	div#pillar {
@@ -207,8 +205,9 @@
 		position: absolute;
 		width: 100%;
 		text-align: center;
-		bottom: 0;
+		bottom: 5%;
 		padding: 10px 0;
+		cursor: pointer;
 	/*	Night Background: #232F3D	*/
 	}
 
@@ -227,8 +226,6 @@
 				<div>0</div>
 				<div>0</div>
 			</div>
-			<div id="timeStamps">
-			</div>
 
 			<div id="hints">
 				<div class="day"></div>
@@ -241,6 +238,9 @@
 			<div class="maincharts">
 				<div id="overcanvas"></div>
 				<div id="main">
+					<div id="timeStamps">
+					</div>
+
 					<div id="pillar">
 					</div>
 				</div>
@@ -258,7 +258,7 @@
 
 		</div>
 
-			<div id="nightmode">Switch To Night Mode</div>
+		<div id="nightmode">Switch To <span>Night</span> Mode</div>
 
 	</div>
 
